# SoundSphere

./: .clang-format  .gitignore  .gitmodules  CMakeLists.txt  README.md  resource.rc
include/SoundSphere/: addon.h
include/SoundSphere/export/: __init__.h  curl.h  imgui.h  libc.h
src/: main.cpp  version.cpp  version.hpp
src/addons/: __init__.cpp  __init__.hpp  export_curl.cpp  export_imgui.cpp  export_libc.cpp
src/assets/: icon.h
src/backends/: __init__.hpp  sdl2_sdlrenderer2.cpp
src/config/: __init__.cpp  __init__.hpp
src/fonts/: NotoSans.c  NotoSans.h  NotoSansKR.h  NotoSansSC.h  fa_solid_900.c  fa_solid_900.h
src/i18n/: __init__.c  __init__.cpp  __init__.h  __init__.hpp  en_US.c  en_us.c  en_us.cpp  zh_CN.c  zh_cn.c  zh_cn.cpp
src/runtime/: __init__.cpp  __init__.hpp  playitem.cpp  playitem.hpp
src/utils/: autoptr.hpp  binary.cpp  binary.hpp  curl.cpp  curl.hpp  defines.hpp  dump.cpp  dump.hpp  env.cpp  env.hpp  explorer.cpp  explorer.hpp  imgui.cpp  imgui.hpp  krc.cpp  krc.hpp  music_tag.cpp  music_tag.hpp  path.cpp  path.hpp  string.cpp  string.hpp  time.cpp  time.hpp  win32.cpp  win32.hpp
src/widgets/: __init__.cpp  __init__.hpp  dummy_player.cpp  dummy_player.hpp  menubar_about.cpp  menubar_debug.cpp  menubar_open.cpp  menubar_preferences.cpp  menubar_translations.cpp  tool_tag_editor.cpp  tool_tag_editor.hpp  ui_cover.cpp  ui_filter.cpp  ui_filter.hpp  ui_lyric.cpp  ui_playbar.cpp  ui_playlist.cpp  ui_statusbar.cpp  ui_title.cpp
tools/: appimage.sh  appimage_ubuntu18.sh  build.ps1  build.sh  clang-format.sh  io.github.qgymib.soundsphere.desktop  io.github.qgymib.soundsphere.metainfo.xml
